fixed layout overflow on smaller screens on users page

--- a/src/components/Pagination/Pagination.styles.scss
+++ b/src/components/Pagination/Pagination.styles.scss
@@ -3,14 +3,20 @@
 
 .custom-pagination {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+
+  @include md {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   .pagination-container {
     display: flex;
     align-items: center;
     list-style-type: none;
     user-select: none;
+    align-self: flex-end;
 
     .pagination-item {
       display: flex;
